unpackaged/main/default/objects/Marketing_Program_Territory__c/Marketing_Program_Territory__c.object-meta.xml
<CustomObject>
    <label>Marketing Program Territory</label>
    <nameField>
        <displayFormat>MPT-{0000000}</displayFormat>
        <label>Marketing Program Territory</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Program Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>