unpackaged/main/default/objects/Marketing_Program_Territory__c/fields/BSF_Portfolio_Territory__c.field-meta.xml
<CustomField>
    <fullName>BSF_Portfolio_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BSF Portfolio Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BSF_Portfolio__c.Portfolio_Type__c</field>
            <operation>equals</operation>
            <value>Account Manager</value>
        </filterItems>
        <filterItems>
            <field>BSF_Portfolio__c.Taxonomy_Type__c</field>
            <operation>equals</operation>
            <value>Bio Recruitment CD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BSF_Portfolio__c</referenceTo>
    <relationshipLabel>BSF Portfolio Territory</relationshipLabel>
    <relationshipName>Marketing_Program_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>