unpackaged/main/default/objects/Marketing_Program_Territory__c/fields/Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program__c</fullName>
    <label>Marketing Program</label>
    <referenceTo>Marketing_Program__c</referenceTo>
    <relationshipLabel>Marketing Program Territories</relationshipLabel>
    <relationshipName>Marketing_Program_Territories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>