unpackaged/main/default/objects/Marketing_Program_Territory__c/fields/Marketing_Program_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program_Is_Active__c</fullName>
    <formula>Marketing_Program__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Program Is Active</label>
    <type>Checkbox</type>
</CustomField>